--- a/src/components/ImageSlider/ImageSlider.css
+++ b/src/components/ImageSlider/ImageSlider.css
@@ -15,7 +15,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.4);
     z-index: 2;
   }
 }
@@ -101,10 +101,9 @@
   z-index: 2;
 
   & h4 {
-    font-size: clamp(var(--text-base), 3vw, 3.5rem);
+    font-size: clamp(var(--text-lg), 4vw, 3.5rem);
     line-height: 1.3em;
     font-weight: bold;
-    margin-block: 0.3em;
   }
 
 }
@@ -118,7 +117,7 @@
   width: fit-content;
   font-weight: bold;
   display: inline-block;
-  margin-top: 2em;
+  margin-top: 1em;
   transition: all 0.2s linear;
 }
 
